[bug 896642] Fix Sign Out/User info dropdown not valigned

--- a/public/css/events/map.less
+++ b/public/css/events/map.less
@@ -113,7 +113,6 @@ body#events.map {
     }
     .ui-select {
         box-sizing: content-box;
-        margin:     4px;
     }
     .datetime > *[class^="ui-"] {
         margin-left: 0px;
